--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="col-12 col-xl-5 col-lg-5 col-md-12">
             <div class="ban_con">
               <h3 id="sajjad">Hello, I'm Jannati.</h3>
-              <h3 id="sajjad">Life of Sajjad. I love him so much</h3>
+              <h3 id="sajjad">Life of Sajjad. I love him so much and much</h3>
               <p>
                 Multifunctional designer/developer <br />
                 based in Bath — a traditionally <br />
