--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
           <div class="col-12 col-xl-5 col-lg-5 col-md-12">
             <div class="ban_con">
               <h3 id="sajjad">Hello, I'm Jannati.</h3>
-              <h3 id="sajjad">Life of Sajjad. Sajjad in my first choose.</h3>
+              <h3 id="sajjad">
+                Life of Sajjad. Sajjad in my first choose. His mother is so cool
+                person.
+              </h3>
               <p>
                 Multifunctional designer/developer <br />
                 based in Bath — a traditionally <br />
